api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hungry-panda.local
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8089
          - path: /vendor
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8089
